# CopyFinderV2

./: CMakeLists.txt  main.cpp  readme.md
DIR_FOR_TEST/: main.py  test_2.py  test_3.py
DIR_FOR_TEST/dir3/: t.txt
controller/: Controller.cpp  Controller.h
md5/: info.txt
utils/: Dir.cpp  Dir.h  File.cpp  File.h
